Begin integrating state machine.

--- a/get_weather_copied_main/.cproject
+++ b/get_weather_copied_main/.cproject
@@ -89,7 +89,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Decode_Transmission.c|andrew_ir_main.c|skeleton.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="stateMachine.c|Decode_Transmission.c|andrew_ir_main.c|skeleton.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
